--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,10 +13,14 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Set VERSION_SUFFIX
-        run: echo "VERSION_SUFFIX=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
+        shell: powershell
+        run: |
+          $VERSION_SUFFIX = $(git rev-parse --short HEAD)
+          echo "VERSION_SUFFIX=$VERSION_SUFFIX" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8
 
       - name: Display VERSION_SUFFIX
-        run: echo "VERSION_SUFFIX is $VERSION_SUFFIX"
+        shell: powershell
+        run: echo "VERSION_SUFFIX is $env:VERSION_SUFFIX"
         
       - name: Add MSBuild to PATH
         uses: microsoft/setup-msbuild@v2
