Core/Dev: Move Plugin API defs to separate header
The monolithic header can be included standalone by plugins, as a better alternative to the old and dusty Zilmar spec headers :P

--- a/Core.vcxproj
+++ b/Core.vcxproj
@@ -173,6 +173,7 @@
     <ClInclude Include="lib\IOHelpers.h" />
     <ClInclude Include="src\Core\Core.h" />
     <ClInclude Include="src\Core\cheats.h" />
+    <ClInclude Include="src\Core\include\core_plugin.h" />
     <ClInclude Include="src\Core\include\core_types.h" />
     <ClInclude Include="src\Core\include\core_api.h" />
     <ClInclude Include="src\Core\stdafx.h" />
